--- a/packages/common/src/styles/_variables.scss
+++ b/packages/common/src/styles/_variables.scss
@@ -1045,7 +1045,6 @@ $slick-dark-text-color:                                   #d4d4d4;
   --slick-menu-color:                                     #ededed;
   --slick-menu-item-disabled-color:                       #686868;
   --slick-menu-divider-color:                             #606060;
-  --slick-menu-item-hover-color:                          var(--slick-base-dark-menu-bg-color);
   --slick-menu-item-hover-color:                          var(--slick-base-dark-menu-item-hover-color);
   --slick-menu-item-hover-border:                         var(--slick-base-dark-menu-item-border);
   --slick-menu-title-border-bottom:                       1px solid #525252;
